--- a/member.html
+++ b/member.html
@@ -59,8 +59,8 @@
 
     <main>
 
-        <div class="teams">
-            <div class="team__header member__header">
+        <section class="teams">
+            <section class="team__header member__header">
                 <div class="header__team header__member">
                     <div class="team__img">
                         <img src="img/losskill.webp" alt="ЛоссКилл">
@@ -88,17 +88,27 @@
                                 </div>
                                 <div class="team__text grid4">
                                     <p class="text-gray">Страна</p>
-                                    <h6>Россия 🇷🇺</h6>
+                                    <div class="text-flag">
+                                        <h6>Россия</h6>
+                                        <div class="flag__img">
+                                            <img src="img/russia.svg" alt="Россия">
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="team__text grid5">
                                     <p class="text-gray">Призовые</p>
-                                    <h6>₽ 100.000</h6>
+                                    <h6>$ 100.000</h6>
                                 </div>
                             </div>
                             <div class="team__text-bottom">
                                 <div class="team__text mobile-dn">
                                     <p class="text-gray">Страна</p>
-                                    <h6>Россия 🇷🇺</h6>
+                                    <div class="text-flag">
+                                        <h6>Россия</h6>
+                                        <div class="flag__img">
+                                            <img src="img/russia.svg" alt="Россия">
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="team__text mobile-dn">
                                     <p class="text-gray">Призовые</p>
@@ -115,20 +125,20 @@
                         <p>Repulse</p>
                     </div>
                 </div>
-            </div>
+            </section>
 
-            <div class="teams__container">
-                <div class="teams__container__header">
+            <section class="teams__container">
+                <section class="teams__container__header">
                     <h2>Участие в командах</h2>
-                </div>
+                </section>
 
-                <div class="teams__container__memebers">
+                <section class="teams__container__memebers">
                     <a href="team.html" class="container__member">
                         <div class="member__person">
                             <div class="person__img">
                                 <img src="img/repulse.png" alt="Repulse">
                             </div>
-                            <div class="persong__info">
+                            <div class="person__info">
                                 <h6>Repulse</h6>
                                 <p>21.11.2023 - настоящее время</p>
                             </div>
@@ -153,7 +163,7 @@
                             <div class="person__img">
                                 <img src="img/3dmax.webp" alt="Team 3DMAX">
                             </div>
-                            <div class="persong__info">
+                            <div class="person__info">
                                 <h6>Team 3DMAX</h6>
                                 <p>26.05.2022 - 09.08.2022</p>
                             </div>
@@ -178,7 +188,7 @@
                             <div class="person__img">
                                 <img src="img/heet.webp" alt="HEET">
                             </div>
-                            <div class="persong__info">
+                            <div class="person__info">
                                 <h6>HEET</h6>
                                 <p>09.11.2021 - 19.01.2022</p>
                             </div>
@@ -204,7 +214,7 @@
                             <div class="person__img">
                                 <img src="img/dbp.webp" alt="Double Poney">
                             </div>
-                            <div class="persong__info">
+                            <div class="person__info">
                                 <h6>Double Poney</h6>
                                 <p>08.10.2019 - 21.12.2020</p>
                             </div>
@@ -230,7 +240,7 @@
                             <div class="person__img">
                                 <img src="img/th.webp" alt="Team Heretics">
                             </div>
-                            <div class="persong__info">
+                            <div class="person__info">
                                 <h6>Team Heretics</h6>
                                 <p>26.11.2018 - 01.10.2019</p>
                             </div>
@@ -249,11 +259,11 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </section>
 
                 <!-- История матчей Desctop версия -->
 
-                <div class="teams__history">
+                <section class="teams__history">
                     <h2>История матчей</h2>
                     <div class="history__row mobile-dn">
                         <div class="history__info">
@@ -261,7 +271,7 @@
                             <div class="history__info__text">
                                 <p class="text-gray lose">Repulse</p>
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/repulse.png" alt="Repulse">
                                 </div>
                             </div>
                         </div>
@@ -271,7 +281,7 @@
                         <div class="history__info">
                             <div class="history__info__text">
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/ag.webp" alt="CrowCrow.AG">
                                 </div>
                                 <p>CrowCrow.AVG</p>
                             </div>
@@ -285,23 +295,50 @@
 
                     <div class="history__row mobile-dn">
                         <div class="history__info">
-                            <p>08.04.24 в 17:15</p>
+                            <p>04.02.23 в 14:30</p>
                             <div class="history__info__text">
-                                <p class="text-gray lose">Repulse</p>
+                                <p>Repulse</p>
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/repulse.png" alt="Repulse">
                                 </div>
                             </div>
                         </div>
                         <div class="history__score">
-                            <h6>1:2</h6>
+                            <h6>2:0</h6>
                         </div>
                         <div class="history__info">
                             <div class="history__info__text">
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/yung.webp" alt="Young">
                                 </div>
-                                <p>CrowCrow.AVG</p>
+                                <p class="text-gray lose">Young</p>
+                            </div>
+                            <div class="history-column">
+                                <p>Фиджитал</p>
+                                <p>Warface</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="history__row mobile-dn">
+                        <div class="history__info">
+                            <p>23.10.22 в 17:15</p>
+                            <div class="history__info__text">
+                                <p class="text-gray lose">Repulse</p>
+                                <div class="history__img">
+                                    <img src="img/repulse.png" alt="Repulse">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="history__score">
+                            <h6>0:1</h6>
+                        </div>
+                        <div class="history__info">
+                            <div class="history__info__text">
+                                <div class="history__img">
+                                    <img src="img/empty.svg" alt="PogChamp">
+                                </div>
+                                <p>PogChamp</p>
                             </div>
                             <div class="history-column">
                                 <p>Фиджитал</p>
@@ -313,23 +350,23 @@
 
                     <div class="history__row mobile-dn">
                         <div class="history__info">
-                            <p>08.04.24 в 17:15</p>
+                            <p>02.11.21 в 13:25</p>
                             <div class="history__info__text">
-                                <p class="text-gray lose">Repulse</p>
+                                <p>Repulse</p>
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/repulse.png" alt="Repulse">
                                 </div>
                             </div>
                         </div>
                         <div class="history__score">
-                            <h6>1:2</h6>
+                            <h6>2:1</h6>
                         </div>
                         <div class="history__info">
                             <div class="history__info__text">
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/empty.svg" alt="Awinaw">
                                 </div>
-                                <p>CrowCrow.AVG</p>
+                                <p class="text-gray lose">Awinaw</p>
                             </div>
                             <div class="history-column">
                                 <p>Фиджитал</p>
@@ -341,23 +378,23 @@
 
                     <div class="history__row mobile-dn">
                         <div class="history__info">
-                            <p>08.04.24 в 17:15</p>
+                            <p>24.02.21 в 19:05</p>
                             <div class="history__info__text">
                                 <p class="text-gray lose">Repulse</p>
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/repulse.png" alt="Repulse">
                                 </div>
                             </div>
                         </div>
                         <div class="history__score">
-                            <h6>1:2</h6>
+                            <h6>2:3</h6>
                         </div>
                         <div class="history__info">
                             <div class="history__info__text">
                                 <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
+                                    <img src="img/ponts.webp" alt="Без_Понтов">
                                 </div>
-                                <p>CrowCrow.AVG</p>
+                                <p>Без_Понтов</p>
                             </div>
                             <div class="history-column">
                                 <p>Фиджитал</p>
@@ -366,38 +403,9 @@
 
                         </div>
                     </div>
-
-                    <div class="history__row mobile-dn">
-                        <div class="history__info">
-                            <p>08.04.24 в 17:15</p>
-                            <div class="history__info__text">
-                                <p class="text-gray lose">Repulse</p>
-                                <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="history__score">
-                            <h6>1:2</h6>
-                        </div>
-                        <div class="history__info">
-                            <div class="history__info__text">
-                                <div class="history__img">
-                                    <img src="img/gamepad.svg" alt="">
-                                </div>
-                                <p>CrowCrow.AVG</p>
-                            </div>
-                            <div class="history-column">
-                                <p>Фиджитал</p>
-                                <p>Warface</p>
-                            </div>
-
-                        </div>
-                    </div>
-
-
 
                     <!-- История матчей мобильная версия -->
+                    
                     <div class="history__row history-mobile">
                         <div class="history__info-mobile">
                             <div class="history__info-mobile-row">
@@ -572,9 +580,9 @@
                         </div>
                     </div>
 
-                </div>
-            </div>
-        </div>
+                </section>
+            </section>
+        </section>
 
     </main>
 
