--- a/teams.html
+++ b/teams.html
@@ -87,14 +87,14 @@
                                         <p>Repulse</p>
                                    </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 23</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar" style="width: 43%;"></div>
@@ -118,14 +118,14 @@
                                         <p>CrowCrow.AG</p>
                                     </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 19</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar" style="width: 68%;"></div>
@@ -149,14 +149,14 @@
                                         <p>Awinaw</p>
                                    </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 4</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar bar-100" style="width: 100%;"></div>
@@ -180,14 +180,14 @@
                                         <p>Young</p>
                                     </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 6</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar" style="width: 83%;"></div>
@@ -211,14 +211,14 @@
                                         <p>MajorTeam</p>
                                    </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 18</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar" style="width: 56%;"></div>
@@ -242,14 +242,14 @@
                                         <p>PogChamp</p>
                                     </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 10</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar" style="width: 70%;"></div>
@@ -273,14 +273,14 @@
                                         <p>Без_Понтов</p>
                                     </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 8</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar" style="width: 50%;"></div>
@@ -304,14 +304,14 @@
                                         <p>TooManyQuestions</p>
                                     </a>
                                 </td>
-                                <td>
-                                    <div class="td__img td__img-ml mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="td__img td__img-ml">
                                         <img src="img/warface.svg" alt="warface">
                                     </div>
                                 </td>
 
-                                <td>
-                                    <div class="member__statistic mobile-dn">
+                                <td class="mobile-dn">
+                                    <div class="member__statistic">
                                         <h6 class="h6-td">Всего матчей: 2</h6>
                                         <div class="statistic statistic-td">
                                             <div class="bar bar-100" style="width: 100%;"></div>
@@ -350,7 +350,7 @@
                         <li><a href="#">Подписаться</a></li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="footer-col mobile-dn">
                     <h4>Адрес</h4>
                     <ul>
                         <li>Адрес: <a href="#">Спартаковская ул., 2, г. Казань</a></li>
@@ -358,7 +358,7 @@
                         <li>Телефон:<a href="#">+7 (999) 999-99-99</a></li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="footer-col mobile-dn">
                     <h4>Страницы</h4>
                     <ul>
                         <li><a href="#">Главная</a></li>
@@ -368,7 +368,7 @@
                         <li><a href="#">Билеты</a></li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="footer-col mobile-dn">
                     <h4>Соц. сети</h4>
                     <ul>
                         <li><a href="#" class="footer__a-df"><i class="fa-brands fa-vk"></i><span
