--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
   </div>
 
   <main>
+
     <!-- Приветственный экран и слайдер -->
 
-    <div class="hello__screen">
+    <section class="hello__screen">
         <div class="swiper-container slider">
           <div class="swiper-wrapper slides">
             <div class="swiper-slide slide slide-in" style="background-image: url('img/1.jpeg')">
@@ -85,10 +86,11 @@
           <span class="swiper-pagination-bullet"></span>
           <span class="swiper-pagination-bullet"></span>
         </div>
-      </div>
+      </section>
+      
     <!-- Полоса возможностей -->
 
-    <div class="advantages">
+    <section class="advantages">
       <div class="advantages__item">
         <div class="item__logo">
           <img src="img/twitch.svg" alt="твитч" class="item__logo-inverse">
@@ -116,14 +118,14 @@
           <p>Создавайте свои игровые турниры и делитесь результатами.</p>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Игровые темы -->
-    <div class="game_themes">
+    <section class="game_themes">
       <div class="game_themes__info">
         <h2>Игровая тема для каждого <br> направления и другое</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, harum soluta repellat quidem alias autem at
-          dolor facilis libero est iusto impedit cum, quod distinctio veritatis minus enim odio? Ratione.</p>
+        <p>Фиджитал спорт, имеет огромное количество направлений и до сих пор развивается. 
+          Возможно именно вы придумаете новое направление в этом молодом виде спорта</p>
         <button class="btn">Узнать подробнее</button>
       </div>
       <div class="game_themes__video">
@@ -132,16 +134,16 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
-    </div>
+    </section>
 
     <!-- Слайдер warface -->
 
-    <div class="controls">
+    <section class="controls">
       <div class="slider-prev"><button>&lt;</button></div>
       <div class="slider-next"><button>&gt;</button></div>
-    </div>
+    </section>
 
-    <div class="slider-s">
+    <section class="slider-s">
 
       <div class="swiper-container1 slider-warface">
         <div class="swiper-wrapper">
@@ -163,7 +165,8 @@
                 </div>
              </div>
               <div class="info__date">
-                <p class="info__date-text">мар.26.2024 - 12:30 по мск</p>
+                <p class="info__date-text">мар.26.2024 - 
+                  12:30 по мск</p>
               </div>
             </div>
           </div>
@@ -185,7 +188,8 @@
                 </div>
              </div>
               <div class="info__date">
-                <p class="info__date-text">мар.26.2024 - 12:30 по мск</p>
+                <p class="info__date-text">мар.26.2024 - 
+                  12:30 по мск</p>
               </div>
             </div>
           </div>
@@ -208,7 +212,8 @@
                 </div>
              </div>
               <div class="info__date">
-                <p class="info__date-text">мар.26.2024 - 12:30 по мск</p>
+                <p class="info__date-text">мар.26.2024 - 
+                  12:30 по мск</p>
               </div>
             </div>
           </div>
@@ -229,7 +234,8 @@
                 </div>
              </div>
               <div class="info__date">
-                <p class="info__date-text">мар.26.2024 - 12:30 по мск</p>
+                <p class="info__date-text">мар.26.2024 - 
+                  12:30 по мск</p>
               </div>
             </div>
           </div>
@@ -251,18 +257,19 @@
                 </div>
              </div>
               <div class="info__date">
-                <p class="info__date-text">мар.26.2024 - 12:30 по мск</p>
+                <p class="info__date-text">мар.26.2024 - 
+                  12:30 по мск</p>
               </div>
             </div>
           </div>
 
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Турнирная сетка -->
 
-    <div class="tournament">
+    <section class="tournament">
 
       <div class="tournamnet__header">
         <div class="tournamnet__header-title">
@@ -275,18 +282,18 @@
           <div class="row__cells">
             <div class="row__cell">
               <div class="cell__img">
-                <img src="img/gamepad.svg" alt="команда">
+                <img src="img/repulse.png" alt="Repulse">
               </div>
-              <h4>Click</h4>
-              <p class="row__text-purple">150</p>
+              <h4>Repulse</h4>
+              <p class="row__text-purple">120</p>
             </div>
             <p>VS</p>
             <div class="row__cell  cell-win">
               <div class="cell__img">
-                <img src="img/tournament.svg" alt="команда">
+                <img src="img/ag.webp" alt="CrowCrow.AG">
               </div>
-              <h4>Click</h4>
-              <p class="row__text-purple">120</p>
+              <h4>CrowCrow.AG</h4>
+              <p class="row__text-purple">150</p>
             </div>
           </div>
           <div class="row__text">
@@ -299,7 +306,6 @@
             </a>
           </div>
         </div>
-
       </div>
 
       <div class="tournament__row">
@@ -307,17 +313,17 @@
           <div class="row__cells">
             <div class="row__cell cell-win">
               <div class="cell__img">
-                <img src="img/gamepad.svg" alt="команда">
+                <img src="img/3dmax.webp" alt="3DMAX">
               </div>
-              <h4>Click</h4>
+              <h4>3DMAX</h4>
               <p class="row__text-purple">131</p>
             </div>
             <p>VS</p>
             <div class="row__cell">
               <div class="cell__img">
-                <img src="img/tournament.svg" alt="команда">
+                <img src="img/yung.webp" alt="Young">
               </div>
-              <h4>Click</h4>
+              <h4>Young</h4>
               <p class="row__text-purple">110</p>
             </div>
           </div>
@@ -331,7 +337,6 @@
             </a>
           </div>
         </div>
-
       </div>
 
       <div class="tournament__row">
@@ -339,17 +344,17 @@
           <div class="row__cells">
             <div class="row__cell">
               <div class="cell__img">
-                <img src="img/gamepad.svg" alt="команда">
+                <img src="img/heet.webp" alt="HEET">
               </div>
-              <h4>Click</h4>
+              <h4>HEET</h4>
               <p class="row__text-purple">119</p>
             </div>
             <p>VS</p>
             <div class="row__cell cell-win">
               <div class="cell__img">
-                <img src="img/tournament.svg" alt="команда">
+                <img src="img/ponts.webp" alt="ponts">
               </div>
-              <h4>Click</h4>
+              <h4>Без_Понтов</h4>
               <p class="row__text-purple">150</p>
             </div>
           </div>
@@ -363,20 +368,21 @@
             </a>
           </div>
         </div>
-
       </div>
-    </div>
+
+    </section>
 
     <!-- Конец страницы -->
 
-    <div class="end">
+    <section class="end">
       <h2 class="end__title slide__info-text">
         UNICON &amp Game Expo
       </h2>
-      <p>Интерактивные стенды фантастических вселенных, конкурсы, новинки настольных и компьютерных игр, аллея авторов и
+      <p>Интерактивные стенды фантастических вселенных, конкурсы, новинки настольных
+         и компьютерных игр, аллея авторов и
         игротеки, площадка для общения, стенды издателей и разработчиков.</p>
       <button class="slide__info-btn btn__end">Посмотреть расписание</button>
-    </div>
+    </section>
 
   </main>
 
@@ -392,7 +398,7 @@
             <li><a href="#">Подписаться</a></li>
           </ul>
         </div>
-        <div class="footer-col">
+        <div class="footer-col mobile-dn">
           <h4>Адрес</h4>
           <ul>
             <li>Адрес: <a href="#">Спартаковская ул., 2, г. Казань</a></li>
@@ -400,7 +406,7 @@
             <li>Телефон:<a href="#">+7 (999) 999-99-99</a></li>
           </ul>
         </div>
-        <div class="footer-col">
+        <div class="footer-col mobile-dn">
           <h4>Страницы</h4>
           <ul>
             <li><a href="#">Главная</a></li>
@@ -410,7 +416,7 @@
             <li><a href="#">Билеты</a></li>
           </ul>
         </div>
-        <div class="footer-col">
+        <div class="footer-col mobile-dn">
           <h4>Соц. сети</h4>
           <ul>
             <li><a href="#" class="footer__a-df"><i class="fa-brands fa-vk"></i><span class="footer__gap">VK</span></a>
