--- a/tickets.html
+++ b/tickets.html
@@ -58,7 +58,7 @@
     <!-- Контент -->
 
     <main class="tickets__content">
-        <div class="hello__screen__tickets">
+        <section class="hello__screen__tickets">
             <div class="hello__info">
                 <h1 class="info__text">Билеты на фиджитал турнир по игре Warface</h1>
                 <p class="info__text-small">Купите на этой странице</p>
@@ -67,9 +67,9 @@
                     <a href="#tickets" class="info__btn">Купить билеты</a>
                 </div>
             </div>
-        </div>
-        <div class="tickets" id="tickets">
-            <div class="tickets__header">
+        </section>
+        <section class="tickets" id="tickets">
+            <section class="tickets__header">
                 <div class="header__btns">
                     <button>Все</button>
                     <button>Май</button>
@@ -93,7 +93,7 @@
                         <option value="Warface">Warface</option>
                     </select>
                 </div>
-            </div>
+            </section>
 
             <!-- Билеты -->
 
@@ -168,7 +168,7 @@
 
             <!-- Инструкция -->
 
-            <div class="instruction">
+            <section class="instruction">
                 <h2 class="instruction__title">Как купить билеты?</h2>
                 <div class="instruction__cells">
                     <div class="cell-inst">
@@ -199,9 +199,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
-        </div>
+        </section>
     </main>
 
     <!-- Футер -->
@@ -215,7 +215,7 @@
                         <li><a href="#">Подписаться</a></li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="footer-col mobile-dn">
                     <h4>Адрес</h4>
                     <ul>
                         <li>Адрес: <a href="#">Спартаковская ул., 2, г. Казань</a></li>
@@ -223,7 +223,7 @@
                         <li>Телефон:<a href="#">+7 (999) 999-99-99</a></li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="footer-col mobile-dn">
                     <h4>Страницы</h4>
                     <ul>
                         <li><a href="#">Главная</a></li>
@@ -233,7 +233,7 @@
                         <li><a href="#">Билеты</a></li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="footer-col mobile-dn">
                     <h4>Соц. сети</h4>
                     <ul>
                         <li><a href="#" class="footer__a-df"><i class="fa-brands fa-vk"></i><span
